ch_18_pmatching - start WIP

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -2360,7 +2360,7 @@
     "have a `content` method defined on it, so attempting to read its content  \n",
     "results in a compiler error, as with `DraftPost`.  \n",
     "\n",
-    "#### -- Post >|init|> Draft >|req_rev|> PendingReview >|approved|> Post\n",
+    "#### -- **Post**::init > **Draft**::req_rev > **PendingReview**::approved > **Post**\n",
     "\n",
     "Because the only way to get a published `Post` instance that does have a  \n",
     "`content` method defined is to call the `approve` method on a  \n",
