Ch 17 - mm - OOP - State as Pattern

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -99,7 +99,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// pub allows Object to be accessed outside of module\n",
@@ -130,7 +134,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "impl AveragedCollection {\n",
@@ -445,7 +453,11 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// This line is defining a public trait named Draw. A trait in Rust is like an  \n",
@@ -493,7 +505,11 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub struct Screen {\n",
@@ -537,7 +553,11 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// @note : can't run this cell 2 because of : \n",
@@ -591,7 +611,11 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "{ // @note : enclosing this in a closure to avoid duplicate in Jupyter cell\n",
@@ -672,7 +696,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub struct Button {\n",
@@ -726,7 +754,11 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "//use gui::Draw;\n",
@@ -774,7 +806,11 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -856,7 +892,7 @@
     "at runtime or  \n",
     "- worry about `getting errors` if a `value doesn’t implement a method` but  \n",
     "we call it anyway.   \n",
-    "-Rust won’t compile our code if the values don’t implement the traits that the  \n",
+    "- Rust won’t compile our code if the values don’t implement the traits that the  \n",
     "trait objects need.\n",
     "\n",
     "For example, Listing 17-10 shows what happens if we try to create a `Screen`  \n",
@@ -868,7 +904,11 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1048,7 +1088,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "/// Psuedo code for blog post : DOES NOT COMPILE\n",
@@ -1138,7 +1182,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// - Post struct encapsulates a state pattern\n",
@@ -1231,7 +1279,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "{ // adding closure because we will be doing multiple passes in later cells\n",
@@ -1292,7 +1344,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "{ // adding closure because we will be doing multiple passes in later cells \n",
@@ -1339,7 +1395,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "{\n",
@@ -1509,7 +1569,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "{\n",
@@ -1601,7 +1665,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1692,7 +1760,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "trait State {\n",
@@ -1910,8 +1982,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// full main.rs code for Post\n",
@@ -1932,7 +2008,9 @@
     "    pub fn add_text(&mut self, text: &str) { \n",
     "        self.content.push_str(text);\n",
     "    }\n",
-    "    \n",
+    "\n",
+    "    // Post::methods to control State::methods\n",
+    "    // - Post is delegating to State, NOT implementing itself\n",
     "    pub fn request_review(&mut self) {\n",
     "        if let Some(s) = self.state.take() {\n",
     "            self.state = Some(s.request_review())\n",
@@ -1948,7 +2026,6 @@
     "    pub fn content(&self) -> &str {\n",
     "        self.state.as_ref().unwrap().content(self)\n",
     "    }\n",
-    "    \n",
     "}\n",
     "\n",
     "use std::fmt;\n",
@@ -2027,8 +2104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2045,13 +2126,13 @@
        "()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{\n",
+    "{   // unit tests for blog post states\n",
     "   \n",
     "    let mut post = Post::new();\n",
     "    println!(\"Post: current state {}\", post.state.as_ref().unwrap().to_string());\n",
@@ -2101,7 +2182,11 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2170,6 +2255,8 @@
     "- instead of returning an instance of `Post`, \n",
     "- it returns an instance of `DraftPost`.  \n",
     "\n",
+    "#### -- Behavior Embedded in Type and Compiler Enforced! --\n",
+    "\n",
     "Because `content is private` and there aren’t any functions that return  \n",
     "`Post`, it’s not possible to create an instance of `Post` right now.\n",
     "\n",
@@ -2213,7 +2300,11 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// @audit - can't run this twice in a row, need to restart kernel\n",
@@ -2303,7 +2394,11 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2418,7 +2513,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
