ch_18_pmatching - refeed destructuring struct/enum

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1612,7 +1612,7 @@
        "()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,16 +1663,16 @@
     "In Listing 18-14, we have a match expression that separates `Point` values into  \n",
     "three cases:  \n",
     "\n",
-    "- points that lie directly on the x axis (which is true when y = 0),  \n",
-    "- on the y axis (x = 0),  \n",
-    "- or neither.\n",
+    "- points that lie directly on the x axis : which is `true` when `y = 0`  \n",
+    "- on the y axis `x = 0`,  \n",
+    "- or `neither` \n",
     "\n",
     "> Filename: src/main.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1692,7 +1692,7 @@
        "()"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1719,17 +1719,24 @@
    "source": [
     "> Listing 18-14: Destructuring and matching literal values in one pattern\n",
     "\n",
-    "The first arm will match any point that lies on the x axis by specifying that  \n",
-    "the y field matches if its value matches the literal 0. The pattern still  \n",
-    "creates an x variable that we can use in the code for this arm.\n",
+    "#### -- Match Arm - Determines the var/values Destructured --\n",
     "\n",
-    "Similarly, the second arm matches any point on the y axis by specifying that  \n",
-    "the x field matches if its value is 0 and creates a variable y for the value of  \n",
-    "the y field. The third arm doesn’t specify any literals, so it matches any  \n",
-    "other Point and creates variables for both the x and y fields.\n",
+    "The first arm will match any point that lies on the x axis by : \n",
+    "- specifying that the `y` field matches, if its value matches the literal `0`  \n",
+    "- The pattern still creates an x variable that we can use in the code for this  \n",
+    "arm\n",
     "\n",
-    "In this example, the value p matches the second arm by virtue of x containing  \n",
-    "a 0, so this code will print On the y axis at 7.\n",
+    "Similarly, the second arm matches any point on the y axis by :  \n",
+    "- specifying that the `x` field matches if its value is `0` and  \n",
+    "- creates a variable `y` for the value of the y field.  \n",
+    "\n",
+    "The third arm doesn’t specify any literals, so it :  \n",
+    "- matches `any` other Point \n",
+    "- and creates variables for both the `x` and `y` fields.\n",
+    "\n",
+    "In this example, the value `p` matches the second arm :  \n",
+    "- by virtue of `x` containing a `0`,  \n",
+    "- so this code will print `On the y axis at 7`\n",
     "\n",
     "Remember that a match expression stops checking arms once it has found the  \n",
     "first matching pattern :  \n",
@@ -1755,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1775,7 +1782,7 @@
        "()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,6 +1798,7 @@
     "{\n",
     "    let msg = Message::ChangeColor(0, 160, 255);\n",
     "\n",
+    "    // explicitly handling all cases\n",
     "    match msg {\n",
     "        Message::Quit => {\n",
     "            println!(\"The Quit variant has no data to destructure\");\n",
@@ -1815,24 +1823,43 @@
    "source": [
     "> Listing 18-15: Destructuring enum variants that hold different kinds of values\n",
     "\n",
-    "This code will print Change the color to red 0, green 160, and blue 255. Try  \n",
-    "changing the value of msg to see the code from the other arms run.\n",
     "\n",
-    "For enum variants without any data, like Message::Quit, we can’t destructure  \n",
-    "the value any further. We can only match on the literal Message::Quit value,  \n",
-    "and no variables are in that pattern.\n",
+    "This code will :  \n",
     "\n",
-    "For struct-like enum variants, such as Message::Move, we can use a pattern  \n",
-    "similar to the pattern we specify to match structs. After the variant name, we  \n",
-    "place curly brackets and then list the fields with variables so we break apart  \n",
-    "the pieces to use in the code for this arm. Here we use the shorthand form as  \n",
-    "we did in Listing 18-13.\n",
+    "- print `Change the color to red 0, green 160, and blue 255`  \n",
+    "- Try changing the value of `msg` to see the code from the `other arms run`\n",
     "\n",
-    "For tuple-like enum variants, like Message::Write that holds a tuple with one  \n",
-    "element and Message::ChangeColor that holds a tuple with three elements, the  \n",
-    "pattern is similar to the pattern we specify to match tuples. The number of  \n",
-    "variables in the pattern must match the number of elements in the variant  \n",
-    "we’re matching."
+    "#### -- Enum variance addressed with PER ARM Destructuring  --\n",
+    "\n",
+    "#### -- Message::Quit => None --\n",
+    "\n",
+    "For enum variants without any data like :  \n",
+    "\n",
+    "- `Message::Quit`, we can’t destructure the value any further.  \n",
+    "\n",
+    "We can only match on the literal `Message::Quit` value, and no variables are in  \n",
+    "that pattern.\n",
+    "\n",
+    "#### -- Message::Move => `struct` Destructuring --\n",
+    "\n",
+    "For struct-like enum variants, such as :  \n",
+    "\n",
+    "- `Message::Move` : we can use a pattern similar to the pattern we specify to  \n",
+    "match structs.  \n",
+    "- After the variant name, we place curly brackets and then list the fields with  \n",
+    "variables so we break apart the pieces to use in the code for this arm.  \n",
+    "\n",
+    "Here we use the shorthand form as we did in Listing 18-13.\n",
+    "\n",
+    "#### -- Message::ChangeColor => element count `tuple` Destructuring --\n",
+    "\n",
+    "For tuple-like enum variants, like :  \n",
+    "- `Message::Write` that holds a `tuple with one element` and  \n",
+    "- `Message::ChangeColor` that holds a `tuple with three elements`,  \n",
+    "- the pattern is similar to the pattern we specify to match tuples.  \n",
+    "\n",
+    "The number of variables in the pattern must match the number of elements in the  \n",
+    "variant we’re matching."
    ]
   },
   {
@@ -1841,16 +1868,18 @@
    "source": [
     "### Destructuring Nested Structs and Enums\n",
     "\n",
-    "So far, our examples have all been matching structs or enums one level deep,  \n",
-    "but matching can work on nested items too!  \n",
+    "So far, our examples have all been matching `structs` or `enums` :  \n",
     "\n",
-    "For example, we can refactor the code in Listing 18-15 to support RGB and HSV  \n",
-    "colors in the ChangeColor message, as shown in Listing 18-16."
+    "- `one level deep`,  \n",
+    "- but matching can work on `nested items` too!  \n",
+    "\n",
+    "For example, we can refactor the code in Listing 18-15 to support `RGB` and  \n",
+    "`HSV` colors in the `ChangeColor` message, as shown in Listing 18-16."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1861,7 +1890,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hsv\n"
+      "hsv : 0, 160, 255\n"
      ]
     },
     {
@@ -1870,15 +1899,18 @@
        "()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// adding additional level of nesting to the enum\n",
+    "// - from generic (i32, i32, i32) \n",
+    "// - to RGB/HSV explicit variant\n",
     "enum Color {\n",
-    "    Rgb(),\n",
-    "    Hsv(),\n",
+    "    Rgb(i32, i32, i32),\n",
+    "    Hsv(i32, i32, i32),\n",
     "}\n",
     "\n",
     "enum Message {\n",
@@ -1889,13 +1921,19 @@
     "}\n",
     "\n",
     "{\n",
-    "    let msg = Message::ChangeColor(Color::Hsv());\n",
+    "    let msg = Message::ChangeColor(Color::Hsv(0, 160, 255));\n",
     "\n",
     "    // Even with 2 enums involved, we can destructure and match in a single\n",
     "    // match statement\n",
     "    match msg {\n",
-    "        Message::ChangeColor(Color::Rgb()) => println!(\"rgb\"),\n",
-    "        Message::ChangeColor(Color::Hsv()) => println!(\"hsv\"),\n",
+    "        Message::ChangeColor(Color::Rgb(r, g, b)) => {\n",
+    "            println!(\"rgb : {r}, {g}, {b}\");\n",
+    "        }\n",
+    "        Message::ChangeColor(Color::Hsv(h, s, v)) => {\n",
+    "            println!(\"hsv : {h}, {s}, {v}\");\n",
+    "        }\n",
+    "        // implicitly ignoring non multi-level enum variants\n",
+    "        // - focusing on ChangeColor(Color::Rgb) and ChangeColor(Color::Hsv)\n",
     "        _ => (),\n",
     "    }\n",
     "\n",
@@ -1908,16 +1946,18 @@
    "source": [
     "> Listing 18-16: Matching on nested enums\n",
     "\n",
+    "#### -- HSV and RGB : Example of Nested arm expressions --\n",
+    "\n",
     "The pattern of the first arm in the match expression :\n",
     "\n",
-    "- matches a Message::ChangeColor enum variant  \n",
-    "- that contains a Color::Rgb variant;  \n",
-    "- then the pattern binds to the three inner i32 values.  \n",
+    "- matches a `Message::ChangeColor` enum variant  \n",
+    "- that contains a `Color::Rgb` variant;  \n",
+    "- then the pattern binds to the `three inner i32` values.  \n",
     "\n",
     "The pattern of the second arm : \n",
     "\n",
-    "- also matches a Message::ChangeColor enum variant,  \n",
-    "- but the inner enum matches Color::Hsv instead.  \n",
+    "- also matches a `Message::ChangeColor` enum variant,  \n",
+    "- but the inner enum matches `Color::Hsv` instead.  \n",
     "\n",
     "We can specify these complex conditions in one match expression, even though  \n",
     "two enums are involved."
@@ -1930,8 +1970,10 @@
     "### Destructuring Structs and Tuples\n",
     "\n",
     "We can mix, match, and nest destructuring patterns in even more complex ways.  \n",
-    "The following example shows a complicated destructure where we nest structs and  \n",
-    "tuples inside a tuple and destructure all the primitive values out: \n",
+    "The following example shows a complicated destructure where we :  \n",
+    "\n",
+    "- nest `structs` and  `tuples` inside a `tuple` and \n",
+    "- destructure all the primitive values out: \n",
     "\n",
     "```rust\n",
     "let ((feet, inches), Point { x, y }) = ((3, 10), Point { x: 3, y: -10 });\n",
@@ -1940,13 +1982,16 @@
     "This code lets us break complex types into their component parts so we can use  \n",
     "the values we’re interested in separately.\n",
     "\n",
-    "Destructuring with patterns is a convenient way to use pieces of values, such  \n",
-    "as the value from each field in a struct, separately from each other."
+    "Destructuring with patterns is a convenient way to : \n",
+    "\n",
+    "- use pieces of values,  \n",
+    "- such as the value from each field in a struct,  \n",
+    "- separately from each other."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1962,6 +2007,11 @@
     }
    ],
    "source": [
+    "// @note : Be sure to go several cells back to define Point lol\n",
+    "// otherwise we get this error :\n",
+    "// - Couldn't automatically determine type of variable `x`.\n",
+    "// - Please give it an explicit type.\n",
+    "\n",
     "let ((feet, inches), Point { x, y }) = ((3, 10), Point { x: 3, y: -10});\n",
     "println!(\"feet: {}, inches: {}, x: {}, y: {}\", feet, inches, x, y);"
    ]
@@ -1972,20 +2022,36 @@
    "source": [
     "### Ignoring Values in a Pattern\n",
     "\n",
-    "You’ve seen that it’s sometimes useful to ignore values in a pattern, such as  \n",
-    "in the last arm of a match, to get a catchall that doesn’t actually do anything  \n",
-    "but does account for all remaining possible values. There are a few ways to  \n",
-    "ignore entire values or parts of values in a pattern: using the _ pattern  \n",
-    "(which you’ve seen), using the _ pattern within another pattern, using a name  \n",
-    "that starts with an underscore, or using .. to ignore remaining parts of a  \n",
-    "value. Let’s explore how and why to use each of these patterns.\n",
+    "You’ve seen that it’s sometimes useful to ignore values in a pattern : \n",
+    "\n",
+    "- such as in the `last arm` of a match, \n",
+    "- to get a `catchall` \n",
+    "- that doesn’t actually do anything \n",
+    "- but does `account for all remaining possible values`  \n",
+    "\n",
+    "There are a few ways to ignore entire values or parts of values in a pattern:  \n",
+    "\n",
+    "- using the `_` pattern (which you’ve seen),  \n",
+    "- using the `_` pattern within `another pattern`,  \n",
+    "- using a `name` that starts with an `underscore`,  \n",
+    "- or using `..` to ignore `remaining parts of a value`  \n",
+    "\n",
+    "Let’s explore how and why to use each of these patterns.\n",
     "\n",
     "### Ignoring an Entire Value with _\n",
     "\n",
-    "We’ve used the underscore as a wildcard pattern that will match any value but  \n",
-    "not bind to the value. This is especially useful as the last arm in a match  \n",
-    "expression, but we can also use it in any pattern, including function  \n",
-    "parameters, as shown in Listing 18-17.\n",
+    "We’ve used the `underscore` as a `wildcard` pattern that will :  \n",
+    "\n",
+    "- `match any value` \n",
+    "- but `not bind to the value``  \n",
+    "\n",
+    "This is especially useful as : \n",
+    "\n",
+    "- the last arm in a match expression,  \n",
+    "- but we can also use it in any pattern,  \n",
+    "- including function parameters,  \n",
+    "\n",
+    "as shown in Listing 18-17.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
